--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,12 @@
 /* Google Fonts */
 @import url('https://fonts.googleapis.com/css2?family=Assistant:wght@400;700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Sofia+Sans+Condensed:wght@500;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Sofia+Sans+Condensed:wght@400;500;900&display=swap');
 
+/* ------------------- Resets/Whole Page ------------------- */
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    /* border: black dashed 1px; */
 }
 
 :root{
@@ -14,16 +14,25 @@
     font-family: 'Sofia Sans Condesed', sans-serif;
 }
 
+body{
+    background-color: rgb(175, 165, 143);
+    color: aliceblue;
+}
+/* ------------------- Nav ------------------- */
+
 nav{
     display: flex;
     align-items: center;
     padding: 1rem;
-    box-shadow: 0px 2px 5px gainsboro;
+    background-color: rgb(202, 193, 172);
+    box-shadow: 0px 2px 5px rgb(234, 226, 226);
 }
 
 nav span{
     font-family: 'Assistant', sans-serif;
     font-size: 1.5rem;
+}
+nav span, nav li{ 
     transition: color ease 400ms;
 }
 
@@ -40,32 +49,100 @@ nav div{
 nav li{ 
     display: inline;
     padding-right: 3rem;
-    transition: color ease 400ms;
 }
+
+/* ------------------- Header/Form ------------------- */
 
 header{
     margin: 2rem;
     padding: 2rem;
     text-align: center;
+    /* border: black dashed 1px; */
 }
 
 header h1{
-    padding-bottom: 2rem;
     font-family: 'Sofia Sans Condesed', sans-serif;
     font-weight: 900;
 }
 
-header button, header input{
+header form button, header input{
     padding: 0.45rem;
 }
 
-header input{
+header form{
+    /* border: black dashed 1px; */
+    padding: 1rem;
+    display: grid;
+    grid-template-rows: repeat(2, auto);
+}
+header input[type="text"]{
     width: 25em;
+    justify-self: center;
+    border: none;
+}
+
+form div{
+    margin-top: 1em;
 }
 
 header i{
     pointer-events: none;
 }
+
+form div label, form div input[type="radio"]{
+    /* border: black dashed 1px; */
+    margin-top: 1rem ;
+    padding: 0.5rem 2rem;
+    background-color: gainsboro;
+    box-shadow: inset 2px 2px 2px gray;
+    transition: all ease-in-out 250ms;
+    color: black;
+}
+
+form div input[type="radio"] {
+    position: absolute !important;
+	clip: rect(0, 0, 0, 0);
+	height: 1px;
+	width: 1px;
+	border: 0;
+	overflow: hidden;
+}
+
+form div input:checked + label{
+    box-shadow: none;
+    background-color: rgb(138, 135, 180);
+}
+
+form div input{
+    justify-self: center;
+}
+
+form div label{
+    margin-right: -0.4em;
+}
+
+form div label:first-of-type {
+    border-radius: 4px 0 0 4px;
+}
+
+form div label:last-of-type {
+    border-radius: 0 4px 4px 0;
+    transition: all ease-in-out 400ms;
+}
+
+form button{
+    border: none;
+    cursor: pointer;
+}
+
+form button:hover{
+    /* border: black dashed 1px; */
+    background-color: rgb(138, 135, 180);
+    box-shadow: none;
+    /* border: none; */
+}
+
+/* ------------------- Results Seaction ------------------- */
 
 main{
     margin: 0 2em;
@@ -76,8 +153,38 @@ main article {
     text-align: center;
 
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: repeat(2, 1fr);
-    gap: 0 100px;
+    grid-template-columns: repeat(auto-fill, minmax(12rem, 1fr));
+    gap: 4rem 2rem;
 }
 
+.card{
+    background-color: rgb(183, 178, 178);
+    border-radius: 5px;
+    padding-top: 1rem;
+    color: black;
+    /* box-shadow: 0.25rem 0.25rem 0.25rem rgb(138, 135, 180); */
+    cursor: pointer;
+    transition: all 300ms ease;
+}
+
+.card:hover{
+    background-color: rgb(216, 209, 209);
+}
+
+.card h4{
+    padding: 0.3rem;
+}
+
+.card p{
+    padding: 0.3rem 01rem 0.5rem;
+    font-weight: 400;
+    font-size: 0.85rem;
+}
+
+main .album-cover{
+    height: auto;
+    width: 90%;
+    border-radius: 5px;
+    box-shadow: 0 0 1rem rgb(0, 0, 0, 0.3 );
+    /* box-shadow: 0.25rem .25rem .25rem rgb(202, 193, 172); */
+}
