--- a/styles.css
+++ b/styles.css
@@ -168,6 +168,7 @@ main article {
 }
 
 .card:hover{
+    box-shadow: 0 0 1rem rgb(0, 0, 0, 0.3 );
     background-color: rgb(216, 209, 209);
 }
 
@@ -187,4 +188,53 @@ main .album-cover{
     border-radius: 5px;
     box-shadow: 0 0 1rem rgb(0, 0, 0, 0.3 );
     /* box-shadow: 0.25rem .25rem .25rem rgb(202, 193, 172); */
+}
+
+/* Results Dialog */
+:modal{
+    max-width: 100ch;
+    border: none;
+    border-radius: 5px;
+    box-shadow: 0 0 1em rgb(0, 0, 0, 0.3 );
+    text-align: center;
+    margin: 6em auto;
+}
+
+:modal::backdrop{
+    background: rgba(0, 0, 0, 0.4);
+}
+
+.js-x-button{
+    float: right;
+    transition: color 100ms ease-in;
+    padding: .5rem;
+}
+
+.js-x-button:hover{
+    color:rgb(131, 131, 131);
+    cursor: pointer;
+}
+
+:modal section{
+    padding: 1.5rem;
+    display: grid;
+    grid-template-columns: auto 1fr;
+}
+
+:modal h5{
+    opacity: 0.6;
+}
+
+:modal p,
+:modal h4{
+    width: 40ch;
+    padding: 0.35rem 0
+}
+
+:modal p{
+    font-size: 0.90rem;
+}
+
+:model strong{
+    font-size: 1rem;
 }
