--- a/styles.css
+++ b/styles.css
@@ -15,7 +15,7 @@
 }
 
 body{
-    background-color: rgb(175, 165, 143);
+    background-color: rgb(136, 136, 136);
     color: aliceblue;
 }
 /* ------------------- Nav ------------------- */
@@ -24,8 +24,8 @@ nav{
     display: flex;
     align-items: center;
     padding: 1rem;
-    background-color: rgb(202, 193, 172);
-    box-shadow: 0px 2px 5px rgb(234, 226, 226);
+    background-color: rgb(136, 136, 136);
+    box-shadow: 0px 2px 5px rgb(175, 175, 175);
 }
 
 nav span{
@@ -38,7 +38,7 @@ nav span, nav li{
 
 nav span:hover, 
 nav li:hover{
-    color: gold;
+    color:rgb(138, 135, 180);
     cursor: pointer;
 }
 
@@ -131,13 +131,16 @@ form div label:last-of-type {
 }
 
 form button{
+    background-color: transparent;
     border: none;
     cursor: pointer;
+    color: white;
+    transition: all 100ms ease
 }
 
 form button:hover{
     /* border: black dashed 1px; */
-    background-color: rgb(138, 135, 180);
+    color: rgb(138, 135, 180);
     box-shadow: none;
     /* border: none; */
 }
@@ -162,9 +165,8 @@ main article {
     border-radius: 5px;
     padding-top: 1rem;
     color: black;
-    /* box-shadow: 0.25rem 0.25rem 0.25rem rgb(138, 135, 180); */
     cursor: pointer;
-    transition: all 300ms ease;
+    transition: all 400ms ease;
 }
 
 .card:hover{
@@ -173,16 +175,22 @@ main article {
 }
 
 .card h4{
-    padding: 0.3rem;
+    padding: 0.3rem 0.5rem;
 }
 
 .card p{
-    padding: 0.3rem 01rem 0.5rem;
+    padding: 0.3rem 01rem 0.7rem;
     font-weight: 400;
     font-size: 0.85rem;
 }
 
-main .album-cover{
+.card h4,
+.card p,
+.album-cover{
+    pointer-events: none;
+} 
+
+.album-cover{
     height: auto;
     width: 90%;
     border-radius: 5px;
