--- a/styles.css
+++ b/styles.css
@@ -140,7 +140,17 @@ form button:hover{
     color: rgb(138, 135, 180);
     box-shadow: none;
 }
+/* ------------------- Error Dialoge -------------------*/
 
+dialog.error{
+    border: none;
+    background-color: white;
+    opacity: 0.7;
+    padding: 0.5rem;
+    border-radius: 10px;
+    margin: 0.5rem auto;
+    box-shadow: 0 0 1rem rgb(0, 0, 0, 0.3 ) ;
+}
 /* ------------------- Results Seaction ------------------- */
 
 main{
